actualizacion de nombre

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ejemplo_npm",
+  "name": "ejcourse_npm",
   "version": "1.0.0",
   "description": "esto es un ejemplo",
   "main": "index.js",
